--- a/style.css
+++ b/style.css
@@ -7,22 +7,12 @@
 }
 
 :root {
-  /* Colors */
-  --light-orange: #f2d0a9ff;
-  --almond: #f1e3d3ff;
-  --crimson: #dc143cff;
-
   /* General */
   --dark-base: #222;
   --lighter-dark: #333;
   --gray: #858585;
   --light-gray: #d2d2d2;
   --light-white: #f1f1f1;
-
-  /* Active */
-  --active-almond: #feecd7;
-  --active-light-white: #dedede;
-  --active-crimson: #c51337;
 
   /* Fonts */
   --base-font: Raleway, sans-serif;
@@ -38,21 +28,123 @@
   --fs-22: 1.375rem;
   --fs-24: 1.5rem;
   --fs-26: 1.625rem;
+  --fs-30: 1.875rem;
+  --fs-32: 2rem;
   --fs-40: 2.5rem;
   --fs-42: 2.625rem;
   --fs-64: 4rem;
   --fs-72: 4.5rem;
+  --fs-80: 5rem;
+  --fs-90: 5.625rem;
 
   /* shadows */
   --light-solid-shadow: 0 2px 0px #111111cc;
   --solid-shadow: 0 2px 0px #111;
-  --shadow-sm: 0 2px 4px rgba(17, 17, 17, 0.502);
+  --shadow-sm: 5px 6px 10px rgba(17, 17, 17, 0.502);
   --drop-shadow: 1px 1px 0px #1111114d;
-
-  /* gradients */
 
 
   /* borders */
   --light-dark-border: 1px solid var(--lighter-dark);
   --dark-thick-border: 2px solid var(--lighter-dark);
 }
+
+body {
+  font-family: var(--base-font);
+}
+
+.home-banner {
+  width: 100%;
+  border-bottom: 1px solid rgba(34,34,34,0.4);
+}
+
+.website-title {
+  text-align: center;
+  font-size: var(--fs-72);
+  font-family: var(--accent-font);
+  padding: 15px 0;
+}
+
+nav {
+  text-align: center;
+  font-size: var(--fs-30);
+  margin-bottom: 20px;
+}
+
+nav a {
+  position: relative;
+  text-decoration: none;
+  color: var(--dark-base);
+  padding: 0 20px;
+}
+
+#link::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 2px;
+  bottom: 0;
+  background: var(--dark-base);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.2s ease-out;
+}
+
+#link:hover::before {
+  transform: scaleX(1);
+}
+
+.hero-section {
+  width: 100%;
+  min-height: 600px;
+  background-image: url(./ressources/Tokyo-GTA.jpg);
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+}
+
+.hero-section#accueil {
+  padding: 225px;
+}
+
+.main-title {
+  color: var(--light-white);
+  font-size: 8rem;
+  font-family: var(--accent-font);
+  letter-spacing: 5px;
+  text-shadow: var(--shadow-sm);
+}
+
+.hero-btn {
+  position: relative;
+  padding: 15px 30px;
+  margin: 5px 20px;
+  font-size: var(--fs-24);
+  border-radius: 5px;
+  border: none;
+  z-index: 1;
+  overflow: hidden; 
+  box-shadow: var(--shadow-sm);
+  color: var(--light-white);
+  text-transform: uppercase;
+}
+
+.hero-btn::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background: var(--dark-base);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: transform 0.3s ease-in-out;
+}
+
+.hero-btn:hover::before {
+  transform: translateY(-100%);
+}
+
+.hero-btn:hover {
+  color: #111;
+} 
