--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
 }
 
 :root {
-  /* General */
+  /* Colors */
   --dark-base: #222;
   --lighter-dark: #333;
   --gray: #858585;
   --light-gray: #d2d2d2;
   --light-white: #f1f1f1;
   --red: #e71616;
+  --white: rgb(243, 240, 238);
 
   /* Fonts */
   --base-font: Raleway, sans-serif;
@@ -85,7 +86,7 @@ nav a {
   width: 50%;
   height: 2px;
   bottom: 0;
-  background: rgb(231, 22, 22);
+  background: var(--red);
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.2s ease-out;
@@ -128,6 +129,7 @@ nav a {
   box-shadow: var(--shadow-sm);
   color: var(--light-white);
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .hero-btn::before {
@@ -148,7 +150,131 @@ nav a {
 
 .hero-btn:hover {
   color: var(--dark-base);
-  background-image: url("/ressources/japan-flag.png");
+  /* background-image: url("/ressources/japan-flag.png");
   background-size: cover;
-  background-position: center;
+  background-position: center; */
 } 
+
+
+/***** Les quartiers *****/
+
+.quartier-section {
+  padding: 0 10px 62px;
+}
+
+.negativ-container {
+  margin: 0 auto;
+  max-width: 1100px;
+  transform: translateY(-100px);
+  background-color: var(--white);
+  border-radius: 25px;
+  padding: 40px 25px 112px;
+  position: relative;
+  box-shadow: var(--shadow-sm);
+}
+
+.negativ-container .surtitle, .heading-2 {
+  text-align: center;
+  padding: 10px 5px;
+} 
+
+.negativ-container .heading-2 {
+  font-size: var(--fs-42);
+  margin-bottom: 60px;
+}
+
+.negativ-container .surtitle {
+  font-size: var(--fs-26);
+}
+
+.quartier-container {
+  max-width: 825px;
+  margin: 0 auto;
+  min-height: 300px;
+  display: flex;
+  border-radius: 3px;
+  box-shadow: var(--shadow-sm);
+  background: var(--dark-base); 
+}
+
+.quartier-2 {
+  background: var(--dark-base); 
+}
+
+.quartier-container:not(.quartier-3) {
+  margin-bottom: 60px;
+}
+
+.quartier-container img {
+  width: 50%;
+  padding: 25px;
+}
+
+.quartier-description {
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  color: var(--light-white);
+}
+
+.quartier-heading {
+  font-family: var(--accent-font);
+  font-size: var(--fs-20);
+  margin-bottom: 20px;
+}
+
+.quartier-description p {
+  line-height: 1.5;
+  margin-bottom: 20px;
+  color: var(--light-gray);
+}
+
+.quartier-link {
+  margin-top: auto;
+  min-width: 150px;
+  align-self: flex-start;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px 14px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: var(--fs-14);
+  font-weight: 600;
+  background-color: var(--light-white);
+  color: var(--dark-base);
+}
+
+.quartier-link:hover {
+  background-color: var(--red);
+}
+
+@media(max-width: 768px) {
+  .quartier-section {
+    padding: 0;
+  }
+  .negativ-container .heading-2 {
+    margin-bottom: 35px;
+  }
+  .negativ-container {
+    padding: 30px 10px 90px;
+  }
+  .quartier-container {
+    max-width: 500px;
+    flex-wrap: wrap;
+  }
+  .quartier-2 .quartier-description {
+    order: 2;
+  }
+  .quartier-2 img {
+    order: 1;
+  }
+  .quartier-container img {
+    width: 100%;
+    padding: 25px;
+  }
+  .quartier-description {
+    padding: 0px 25px 25px;
+    width: 100%;
+  }
+}
