--- a/style.css
+++ b/style.css
@@ -98,31 +98,30 @@ nav a {
   transform: scaleX(1);
 }
 
+/*** hero section ***/
+
 .hero-section {
   padding: 145px 10px 10px;
-  min-height: 700px;
-  background-image: url(./ressources/TokyoNight.jpg);
+  min-height: 600px;
+  background-image: url(./ressources/TokyoOverview.jpg);
   background-size: cover;
   background-position: center;
   text-align: center;
 }
 
-.hero-section#accueil {
-  padding: 225px;
-}
-
-.main-title {
-  color: var(--light-white);
-  font-size: 7rem;
+.main-heading {
+  color: white;
   font-family: var(--accent-font);
-  letter-spacing: 5px;
+  font-size: var(--fs-90);
   text-shadow: var(--shadow-sm);
+  letter-spacing: 2px;
+  margin-bottom: 25px;
 }
 
 .hero-btn {
   position: relative;
   padding: 15px 30px;
-  margin: 5px 20px;
+  margin: 5px 40px;
   font-size: var(--fs-16);
   border-radius: 5px;
   border: none;
@@ -132,6 +131,12 @@ nav a {
   color: var(--light-white);
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.hero-btn span {
+  text-transform: uppercase;
+  font-size: var(--fs-14);
+  font-weight: 600;
 }
 
 .hero-btn::before {
@@ -154,24 +159,31 @@ nav a {
   color: var(--dark-base);
 } 
 
-@media(max-width: 768px){
-  .website-title {
-    font-size: var(--fs-42);
-  }
-  .main-title {
+@media (max-width: 768px) {
+  .main-heading{
     font-size: var(--fs-72);
   }
-  .heading-2 {
-    font-size: var(--fs-26);
-  }
-  .surtitle {
-    font-size: var(--fs-16);
+  .hero-section {
+    min-height: 550px;
   }
   .hero-btn {
-    font-size: var(--fs-14);
-    padding: 10px 20px;
-    margin: 5px 10px;
-    }
+    min-width: 135px;
+    padding: 10px 12px;
+  }
+  .hero.section span {
+    font-size: var(--fs-12);
+  }
+  .hero-btn img {
+    width: 14px;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 600px){
+  .hero.section {
+    padding-top: 100px;
+    min-height: 450px;
+  }
 }
 
 
@@ -192,17 +204,17 @@ nav a {
   box-shadow: var(--shadow-sm);
 }
 
-.negativ-container .surtitle, .heading-2 {
+.surtitle, .heading-2 {
   text-align: center;
   padding: 10px 5px;
 } 
 
-.negativ-container .heading-2 {
+.heading-2 {
   font-size: var(--fs-42);
   margin-bottom: 60px;
 }
 
-.negativ-container .surtitle {
+.surtitle {
   font-size: var(--fs-26);
 }
 
@@ -265,7 +277,7 @@ nav a {
 }
 
 .quartier-link:hover {
-  background-image: url("/LaboCSS/ressources/japan-flag.png");
+  background-image: url("/ressources/japan-flag.png");
   background-position: center;
   background-size: cover;
 }
@@ -274,7 +286,7 @@ nav a {
   .quartier-section {
     padding: 0;
   }
-  .negativ-container .heading-2 {
+  .heading-2 {
     margin-bottom: 35px;
   }
   .negativ-container {
@@ -305,7 +317,7 @@ nav a {
 .parallax {
   min-height: 275px;
   background-image: url(ressources/parallax.jfif);
-  background-position: center;
+  background-position: top;
   background-size: cover;
 
   /* pour l'effet visuel */
@@ -341,4 +353,254 @@ nav a {
   .parallax-text {
     font-size: var(--fs-18);
   }
+}
+
+/*** PRICING ***/
+
+.pricing {
+  padding: 44px 10px 136px;
+  background-image: var(--radial-white-beige);
+}
+
+.pricing .heading-2 {
+  margin-bottom: 62px;
+}
+
+.pricing-cards-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.pricing-card {
+  width: 275px;
+  min-height: 300px;
+  padding: 18px;
+  background-color: var(--red);
+  border-radius: 5px;
+  border: var(--dark-thick-border);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.pricing-card h3 {
+  font-family: var(--accent-font);
+  font-size: var(--fs-26);
+  margin-bottom: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.plan-line {
+  width: 100%;
+  margin: 0 10px;
+  height: 1px;
+  background-color: var(--dark-base);
+}
+
+.plan-price {
+  font-size: var(--fs-24);
+  font-family: var(--accent-font);
+  font-weight: bold;
+  font-style: italic;
+}
+
+.card-subtitle {
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+
+.pricing-card ul {
+  margin-bottom: 36px;
+}
+
+.pricing-card li {
+  list-style-type: none;
+  display: flex;
+  font-weight: 500;
+}
+
+.pricing-card li:not(:last-of-type) {
+  margin-bottom: 14px;
+}
+
+.pricing-card li img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.pricing-card button {
+  margin-top: auto;
+  padding: 10px;
+  font-size: var(--fs-16);
+  font-weight: bold;
+  cursor: pointer;
+  border: var(--dark-thick-border);
+  border-radius: 2px;
+  background-color: var(--light-white);
+}
+
+.pricing-card button:hover {
+  color: var(--light-white);
+  background-color: var(--dark-base);
+}
+
+.c1 {
+  transform: translateY(10px) rotate(-10deg);
+  margin-right: 15px;
+}
+
+.songoku {
+  width: 300px;
+  height: auto;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.c3 {
+  transform: translateY(10px) rotate(10deg);
+}
+
+.shadow {
+  display: block;
+  margin: 20px auto 0;
+  width: 400px;
+}
+
+@media (max-width: 900px) {
+  .pricing {
+    padding-bottom: 60px;
+  }
+  .pricing .heading-2 {
+    margin-bottom: 40px;
+    font-size: var(--fs-30);
+  }
+  .pricing-cards-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pricing-card {
+    width: 100%;
+    max-width: 550px;
+    min-height: auto;
+    margin-bottom: 25px;
+    justify-content: center;
+  }
+  .pricing-card h3 {
+    font-size: var(--fs-22);
+  }
+  .plan-price {
+    font-size: var(--fs-20);
+  }
+  .card-subtitle {
+    margin-bottom: 24px;
+  }
+  .pricing-card button {
+    padding: 8px;
+    font-size: var(--fs-14);
+  }
+  .c1,.c2,.c3 {
+    transform: none;
+  }
+  .c1 {
+    margin-right: 0;
+  }
+  .songoku{
+    display: none;
+  }
+  .shadow {
+    display: none;
+  }
+}
+
+.contact {
+  padding: 120px 10px;
+  background-image: url(ressources/TokyoStreet.jpg);
+  background-position: center;
+  background-size: cover;
+  border-top: var(--dark-thick-border);
+}
+
+.rounded-contact {
+  margin: 0 auto;
+  max-width: 800px;
+  background-color: var(--light-white);
+  padding: 50px 40px 92px;
+  border-radius: 25px;
+  box-shadow: var(--shadow-sm);
+  border: var(--dark-thick-border);
+}
+
+.rounded-contact h2 {
+  margin-bottom: 44px;
+}
+
+.contact-list {
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+.contact-list img {
+  width: 30px;
+}
+
+.contact-list li {
+  border-radius: 5px;
+  list-style-type: none;
+  padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--red);
+  border: var(--dark-thick-border);
+}
+
+.contact-list li:not(:nth-child(3)) {
+  margin-bottom: 15px;
+}
+
+.contact-list a, .contact-list span {
+  font-size: var(--fs-20);
+  color: var(--dark-base);
+  font-weight: 700;
+  text-decoration: none;
+}
+
+@media (max-width: 450px) {
+  .contact {
+    padding: 40px 10px;
+  }
+  .contact .heading-2 {
+    font-size: var(--fs-24);
+  }
+  .rounded-contact {
+    padding: 30px 20px;
+  }
+  .contact-list li {
+    padding: 10px;
+  }
+  .contact-list a, 
+  .contact-list span {
+    font-size: var(--fs-14);
+  }
+  .contact-list img {
+    width: 20px;
+  }
+}
+
+/*** FOOTER ***/
+
+footer {
+  background-color: var(--light-orange);
+  padding: 10px 0;
+  text-align: center;
+}
+
+footer a {
+  text-decoration-color: var(--dark-base);
+  color: var(--dark-base);
+  text-underline-offset: 4px;
+  font-weight: 500;
 }
